@@ -10,7 +10,9 @@ xxx, S3QL HEAD
     compatibility with FUSE4BSD.
 
   * The --homedir option has been replaced by the more finely grained
-    --authfile, --cachedir and --logdir options.
+    --authfile, --cachedir and --log options.
+
+  * S3QL can now log directly to syslog.
 
 2011-05-20, S3QL 1.0.1
 
